--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
     "lodash": "^4.0.0",
     "twitter-node-client": "^0.0.6"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "browser-sync": "^2.11.1",
+    "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-handlebars": "^4.0.0",
+    "gulp-less": "^3.0.5",
+    "gulp-uglify": "^1.5.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./getActivity.js"
