--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "private": true,
   "dependencies": {
     "bootstrap-sass": "~3.3.5",
-    "lodash": "~3.10.1"
+    "lodash": "~3.10.1",
+    "handlebars": "~4.0.5"
   },
   "overrides": {
     "bootstrap-sass": {
