--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./getActivity.js"
+    "start": "node ./getTwitterActivity.js"
   },
   "repository": {
     "type": "git",
