--- a/bower.json
+++ b/bower.json
@@ -2,9 +2,15 @@
   "name": "hft-atlas",
   "private": true,
   "dependencies": {
-    "bootstrap-sass": "~3.3.5",
-    "lodash": "~3.10.1",
-    "handlebars": "~4.0.5"
+    "bootstrap-sass": "~3.3.6",
+    "lodash": "~4.0.1",
+    "handlebars": "~4.0.5",
+    "baobab": "~2.3.3",
+    "bootstrap": "~3.3.6",
+    "d3": "~3.5.13",
+    "jquery": "~2.2.0",
+    "jquery-instagram": "~0.3.1",
+    "topojson": "~1.6.20"
   },
   "overrides": {
     "bootstrap-sass": {
